adopting HiveMQ client "subscribePublishes" working with `FlowableWithSingle` in order to replace separate "subscribe" and "publish" call to the HiveMQ client API
Signed-off-by: Thomas Jaeckle <thomas.jaeckle@bosch.io>